# mathematicallm

./: Procfile  README.md  pyproject.toml  pyrightconfig.json
modules/zermelo/: ARCHITECTURE.md  pyproject.toml
modules/zermelo/examples/: enhanced_display_demo.py  escalation_game_strategies_demo.py  game_tree_usage.py  multiple_equilibria_demo.py  strategy_service_demo.py
modules/zermelo/src/zermelo/: __init__.py
modules/zermelo/src/zermelo/analysis/: __init__.py  equilibria.py  matching.py  strategies.py
modules/zermelo/src/zermelo/extensive/: __init__.py  equilibrium.py  game_node.py  game_tree.py  node_data.py  strategy.py
modules/zermelo/src/zermelo/parsers/: __init__.py  yaml.py
modules/zermelo/src/zermelo/services/: equilibria.py  nash.py  strategic_form.py  strategy.py  strategy_service.py  subgame_perfect_equilibria.py
modules/zermelo/src/zermelo/trees/: __init__.py  mixed_strategy.py  node.py  strategy.py
modules/zermelo/src/zermelo/visualization/: render.py
modules/zermelo/tests/: __init__.py  conftest.py  test_game_tree.py  test_multiple_equilibria.py  test_strategic_form.py  test_strategy_find_full_pure_strategies.py  test_strategy_find_reduced_pure_strategies.py  test_strategy_service_find_full_pure_strategies.py  test_strategy_service_find_reduced_pure_strategies.py
modules/zermelo/tests/trees/: test_equilibria.py  test_matching.py  test_node.py  test_render.py  test_strategies.py  test_strategy.py  test_yaml.py
servers/zermelo-mcp/: pyproject.toml  server.py  test_matching_tool.py  test_server.py
