[project]
name = "zermelo"
version = "0.1.0"
dependencies = [
    "treelib",
    "sympy",
    "pyyaml",
    "graphviz",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zermelo"]
